remove debug code

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -51,7 +51,7 @@
 		    }
 
             var local="./api/";
-            local="http://localhost:8080/api-wrap-service/api/";
+            //local="http://localhost:8080/api-wrap-service/api/";
 
 		    $.ajax(local+url,ajaxParam);
 
